--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,17 @@ html {
 /* Dev */
 
 
-section.academic,
-section.academic*{
+a:hover{
+    color:aliceblue;
+}
+
+section.Education,
+section.Education*{
+    outline: 5px solid;
+}
+
+section.Personal,
+section.Personal*{
     outline: 5px solid;
 }
 
@@ -19,50 +28,49 @@ section.academic*{
 header {
     width: 100%;
     position:fixed;
-    background-color: rgba(0, 140, 255, 0.366);
+    background-color: rgba(0, 128, 0, 0.22);
     z-index: 20;
     & nav{
         display: flex;
         justify-content: center;
         align-items: center;
         justify-content: space-evenly;
+        height: 100px;
         & h1{
-            font-size: 30px;
+            font-size: 35px;
         }
 
-        & button{
-            border: none;
-            background: none;
-            height: 100%;
-            font-size: medium;
-            font-weight: 600;
-            transition: .3s ease-in-out;
+        & a{
+            text-decoration: none;
+            color: black;
+            transition: color 0.5s ease, text-dectoration 0.5s ease;
+            font-size: 20px;
 
             &:hover{
-                color:rgb(13, 167, 214);;
+                color:rgba(243, 148, 7, 0.477);
             }
         }
     }
 }
 
-section.hero{
+section.Header{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
     overflow: hidden;
     position: relative;
     justify-content: center;
-
     & img{
+        padding-top: 39%;
         position: absolute;
-        left: 10;
-        top: 10;
-        width: 80%;
+        width: 100%;
         object-fit: cover;
-        height: 90vh;
+        height: auto;
+
         z-index: -1;
+
     }
+
 
     & div{
         display: flex;
@@ -71,7 +79,7 @@ section.hero{
         justify-content: center;
         height: 10vh;
         background:none;
-        padding: 1.5rem;
+        padding: 1rem;
         margin: 1rem;
         gap: 14px;
         opacity: 80%;
@@ -100,38 +108,75 @@ section.hero{
     &:hover{
         transform: scale(110%) translateY(-4px);
         box-shadow: black 0px 15px 15px -7px;
-        
+
     }
     }
 }
 }
 
-section.academic{
-    height: 60vh;
-    display: flex;
-    align-content: center;
-    justify-content: center;
+section.Personal{
     flex-direction: column;
-    padding: 5rem 1rem;
+    padding: 1rem 2rem;
+    display: flex;
+    & h1{
+        color: rgba(150, 67, 227, 0.853);
+        font-size: 30px;
+        align-self:center;
+        font-weight: normal;
+        padding-bottom: 10px;
+    }
+
+    & div{
+        outline: solid;
+        padding: 10px 1rem;
+        font-size: 12px;
+        background-color:rgba(29, 167, 198, 0.359);
+        & h2{
+            font-weight: normal;
+        }
+}
+}
+
+section.Education{
+    height: 80px;
+    display: flex;
+    width: auto;
+    flex-direction: column;
+    padding: 1rem 2rem;
+
+    & h2{
+    font-weight: normal;
+    }
 
     & h4{
         color: rgba(0, 106, 255, 0.603);
         font-size: 20px;
+        padding: 10px 10px;
     }
 
     & h5{
         color: rgba(189, 36, 36, 0.531);
         font-size: 20px;
+        padding-bottom: 10px;
     }
 
     & h6{
         color: goldenrod;
         font-size: 20px;
+        padding: 10px 10px;
     }
+
+    & h7{
+        align-self: center;
+        font-size: 30px;
+        color: rgba(18, 103, 164, 0.639);
+        padding: 10px 10px;
+    }
+
     & div div{
         font-size: 12px;
-        padding: 6px 3px;
-        grid-template-rows: 15px 15px;
+        padding: 10px 1rem;
         outline: solid;
+        background-color: rgba(29, 167, 198, 0.359);
         }
     }
