--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,6 @@ section.Header{
         width: 100%;
         object-fit: cover;
         height: auto;
-
         z-index: -1;
 
     }
@@ -124,6 +123,7 @@ section.Personal{
         align-self:center;
         font-weight: normal;
         padding-bottom: 10px;
+        padding-top: 10px;
     }
 
     & div{
