--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,9 +88,9 @@ section.Front{
             padding: 20px 30px;
             border-radius: 5px ;
             border-color: white;
-            width: 20%;
+            width: 25%;
             transition: 0.32s ease-out;
-            font-size: 2rem;
+            font-size: 30px;
             background-color: rgba(42, 74, 70);
             border-color: white;
             color: rgb(255, 255, 255);
